# portfolio

./: README.md  app.py  constants.py  pyproject.toml
static/stylesheets/: styles.css
templates/: _banner.html  _character_sheet.html  _contact.html  _footer.html  _intro.html  _navbar.html  _quotes.html  _work_history.html  index.html
tests/: app_test.py
