[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["jukafah <jukafah@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
pytest = "^7.2.2"
assertpy = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
